--- a/pic-api/src/main/resources/templates/login.html
+++ b/pic-api/src/main/resources/templates/login.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>KakaoLogin</title>
+    <style>
+        .kakao-login-button {
+            display: inline-block;
+            background-color: #fee500;
+            color: #3c1e1e;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 <div class="container" style="display: flex; justify-content: center; align-content: center; align-items: center; flex-direction: column; margin: 200px auto; ">
     <h1>카카오 로그인</h1>
-    <a th:href="${location}">
-        <img src="./kakao_login_medium_narrow.png">
+    <a href="https://kauth.kakao.com/oauth/authorize"
+       th:href="@{https://kauth.kakao.com/oauth/authorize(client_id=${kakaoApiKey}, redirect_uri=${redirectUri}, response_type='code')}" class="kakao-login-button">
+    카카오 로그인
     </a>
 </div>
 </body>
