feat: Write login, error, withdraw web

--- a/pic-api/src/main/resources/templates/login.html
+++ b/pic-api/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="container" style="display: flex; justify-content: center; align-content: center; align-items: center; flex-direction: column; margin: 200px auto; ">
-    <h1>카카오 로그인</h1>
+    <h1>PIC</h1>
     <a href="https://kauth.kakao.com/oauth/authorize"
        th:href="@{https://kauth.kakao.com/oauth/authorize(client_id=${kakaoApiKey}, redirect_uri=${redirectUri}, response_type='code')}" class="kakao-login-button">
     카카오 로그인
